--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .devider {
